--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -16,8 +16,8 @@ availableColors;Available colours;Tilgængelige farver
 bag;Bag;Indkøbskurv
 black;Black;Sort
 blue;Blue;Blå
-brand;Brand;Mærke
-brandRequired;Please insert brand;Indsæt venligst mærke
+brand;Brand;Brand
+brandRequired;Please insert brand;Indsæt venligst brand
 brown;Brown;Brun
 browseImages;Browse images;Tilføj produkt billeder
 calendar;Calendar;Kalender
