--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -22,7 +22,6 @@ brown;Brown;Brun
 browseImages;Browse images;Tilføj produkt billeder
 calendar;Calendar;Kalender
 cancel;Cancel;Annuller
-cannotDeleteAdmin;This action is not allowed for admin;Admin bruger kan ikke slettes
 care;Care;Vaskeanvisning
 categories;Categories;Kategorier
 category;Category;Kategori
@@ -192,7 +191,7 @@ notVisibleInShop;is not visible in the shop until the main category is published
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
 orange;Orange;Orange
 orders;Orders;Ordrer
-oytOfStock;Out of stock;Udsolgt
+outOfStock;Out of stock;Udsolgt
 page;Page;Side
 parentCategoryIs;Parent category is;Hovedkategori er
 password;Password;Adgangskode
