--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -36,7 +36,7 @@ categoryNotFound;Category not found;Kategorien findes ikke
 categoryRequired;Please select a category;Vælg venligst kategori
 categoryStatus;Category status;Kategori status
 categoryUpdated;Category updated;Kategori opdateret
-circelChevronRight;Circel chevronRight;Circel chevronRight
+circleChevronRight;Circle chevronRight;Circle chevronRight
 clearFilters;Clear filters;Ryd filtre
 clearSort;Clear sort;Ryd sortering
 close;Close;Luk
