--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -201,7 +201,7 @@ passwordUppercase;Password should contain at least one uppercase letter;Adgangsk
 payment;Payment;Betaling
 paymentAndDelivery;Payment and delivery;Betaling og levering
 paymentText;You can pay by credit card or MobilePay. We only charge your payment once your order has been shipped;Betaling kan ske med kreditkort eller MobilePay. Vi trækker først beløbet, når din ordre er afsendt
-pensil;Pensil;Blyant
+pencil;Pencil;Blyant
 pink;Pink;Pink
 pleaseEnter;Please enter;Indsæt venligst
 pleaseEnterCategoryName;Please enter a name for category;Indsæt venligst navn på kategori
