--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -98,7 +98,7 @@ favorites;Favorites;Favoritter
 filesCanBeUploaded;files can be uploaded;filer kan uploades
 fileExceedsSize;Selected file(s) exceeds the 1MB limit; Valgte fil(er) overstiger grænsen på 1 MB. Upload venligst en mindre fil
 fileTooLarge;File too large;Filen er for stor
-filesSuported;Files suported;Tilladte filer
+filesSupported;Files suported;Tilladte filer
 fillAll;Please fill all inputs;Udfyld venligst alle felter
 filter;Filter;Filtrer
 filterProducts;Filter products;Filtrer produkter
