--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -53,6 +53,7 @@ compact;Compact;Kompakt
 confirmPassword;Confirm password;Gentag adgangskode
 contact;Contact;Kontakt
 copy;Copy;Kopi
+copyAction;Copy;Kopier
 couldNotFindInfo;Sorry, We couldn’t find the information you’re looking for;Vi kunne desværre ikke finde den information, du søger
 countInStock;Items in stock;Antal på lager
 create;Create;Opret
