--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -243,6 +243,7 @@ published;Published;Udgivet
 publishTime;Publish time;Udgivelsestidspunkt
 purple;Purple;Lilla
 qty;Qty;Antal
+rateProduct;Rate product;Bedøm produkt
 red;Red;Rød
 removeFromFavorite;Remove  from favorite;Fjern fra favorit
 resetFiltersAndSorting;Reset filters and sorting;Nulstil filtre og sortering
