--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -261,7 +261,8 @@ selectPreferences;Select preferred language and currency;Vælg venligst sprog og
 selectSize;Select size;Vælg størrelse
 selectedColor;Selected colour;Valgt farve
 selectedSize;Selected size;Valgt størrelse
-shareYourexperience;Share your experience;Del din oplevelse
+shareReview;Share review;Del anmeldelse
+shareYourExperience;Share your experience;Del din oplevelse
 shoes;Shoes;Sko
 shopCart;Shopping cart;Indkøbskurv
 shopKidsHeading;Playful by Nature;Leg er liv
