--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -174,6 +174,7 @@ noData;No data found;Ingen data fundet
 noEmail;Please enter an email;Indtast venligst en e-mail
 noFavorites;Find your must-haves and save them here, so you can easily come back to them;Find dine must-haves og gem dem her, så du nemt kan vende tilbage til dem
 noFavoritesYet;No favorites yet;Ingen favoritter endnu
+noImagesProvided;No images provided;Ingen billeder
 noOptions;No options;Ingen valgmuligheder
 noPassword;Please enter a password;Indtast venligst en adgangskode
 noReview;Be the first to review this product;Bliv den første til at anmelde dette produkt
