--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -185,6 +185,7 @@ notAuthorizedTokenFailed;Not authorized, token failed;Ikke autoriseret, token mi
 notifyMe;Notify me;Giv mig besked
 notifyMeMessage;Choose below, and we’ll notify you when it’s restocked; Vælg herunder, så får du en e-mail, når varen igen er på lager
 notifySuccessMeMessage;We got your request. Hopefully we’ll be in touch soon;Vi har modtaget din forespørgsel. Forhåbentlig hører du snart fra os
+notRatedYet;Not srated yet;Ikke bedømt endnu
 noTumbleDry;Not suitable for tumble drying;Ikke egnet til tørretumbler
 notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
