--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -295,7 +295,9 @@ shopWomanLink;Shop Women;Shop dame
 shopWomanText;Find pieces that inspire self-expression—effortless, bold, and made to move with you;Udtryk dig selv med styles, der er ubesværede, modige og med dig i bevægelse
 show;Show;Vis
 showAll;Show all;Vis alle
+showAllTags;Show all tags;Vis alle tags
 showContent;Show content;Vis indhold
+showLessTags;Show less tags;Vis færre tags
 showPassword;Show password;Vis adgangskode
 showPrice;Show price;Vis pris
 silver;Silver;Sølv
