--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -191,6 +191,7 @@ notRatedYet;Not srated yet;Ikke bedømt endnu
 noTumbleDry;Not suitable for tumble drying;Ikke egnet til tørretumbler
 notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
+numberOfReviews;Number of reviews;Antal reviews
 orange;Orange;Orange
 orders;Orders;Ordrer
 outOf;out of;ud af
