--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -284,11 +284,11 @@ shoes;Shoes;Sko
 shopCart;Shopping cart;Indkøbskurv
 shopKidsHeading;Playful by Nature;Leg er liv
 shopKidsLink;Shop kids;Shop børn
-shopKidsMenuText;Adventure-ready styles for every playday;Eventyrklare styles til hver legedag
+shopKidsMenuText;Turn every playday into a magical adventure with our colorful and imaginative outfits;Gør hver legedag til et eventyr med vores farverige og fantasifulde outfits
 shopKidsText;Fun, functional, and built for adventure-styles kids love and parents trust;Sjove og funktionelle styles til børn på farten og forældre med krav til kvalitet
-shopMenHeading;Luxury begins with the feeling;Luksus starter med følelsen
+shopMenHeading;Luxury for men;Luksus til mænd
 shopMenLink;Shop men;Shop herre
-shopMenMenuText;Refined essentials for modern living;Raffinerede essentials til den moderne mand
+shopMenMenuText;Effortless style starts with our curated essentials for the modern gentleman;Træd ind i stil med vores tidløse essentials for manden, der værdsætter kvalitet
 shopMenText;Premium materials and considered design. For the man who knows that calm is a kind of strength;Eksklusive materialer og gennemtænkt design. Til manden der forstår, at ro også er styrke
 shopNewHeading;Celebrating Life;Celebrating Life
 shopNewText;Discover style made to move with your passions and celebrate what makes you unique;Opdag stil skabt til at følge dine passioner og hyld det, der gør dig unik
@@ -296,7 +296,7 @@ shopNow;Shop now;Shop nu
 shopWomanHeading;Empower Your Everyday;Styrke i din stil
 shopWomanLink;Shop Women;Shop dame
 shopWomanText;Find pieces that inspire self-expression, effortless, bold, and made to move with you;Udtryk dig selv med styles, der er ubesværede, modige og med dig i bevægelse
-shopWomenMenuText;Effortless looks that move with you;Ubesejrede looks der bevæger sig med dig
+shopWomenMenuText;Express yourself in every step—effortless, fearless, and made to move. Grab your favorites today;Udtryk dig i hvert skridt, ubesværet, frygtløs og skabt til bevægelse. Find dine favoritter i dag
 shopWomenHeading;Empower Your Everyday;Styrke i din stil
 show;Show;Vis
 showAll;Show all;Vis alle
