--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -302,7 +302,7 @@ shopMenHeading;Luxury for men;Luksus til mænd
 shopMenMenuText;Effortless style starts with our curated essentials for the modern gentleman;Træd ind i stil med vores tidløse essentials for manden, der værdsætter kvalitet
 shopNow;Shop now;Shop nu
 shopWomenHeading;Empower Your Everyday;Styrke i din stil
-shopWomenMenuText;Express yourself in every step—effortless, fearless, and made to move. Grab your favorites today;Udtryk dig i hvert skridt, ubesværet, frygtløs og skabt til bevægelse. Find dine favoritter i dag
+shopWomenMenuText;Express yourself in every step—effortless, fearless, and made to move. Grab your favorites today;Udtryk dig selv, ubesværet, frygtløst og i bevægelse. Find dine nye favoritter i dag
 show;Show;Vis
 showAll;Show all;Vis alle
 showAllTags;Show all tags;Vis alle tags
