--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -366,3 +366,10 @@ woman;Woman;Dame
 women;Women;Damer
 yellow;Yellow;Gul
 yesterday;Yesterday;I går
+desktopAdAltText;A young woman smiles in surprise, elegantly delighted by a young man;En ung kvinde smiler af overraskelse, elegant overrasket af en ung mand
+kidsAdAltText;Stylish children, a girl in a white sleeveless top with a matching hat and a boy in a colorful shirt, sitting together in a playful yet elegant pose;Stilfulde børn, en pige i hvid ærmeløs top med matchende hat og en dreng i farverig skjorte, sidder sammen i et legende men elegant udtryk
+menAdAltText;Elegant man with a hat, suspenders, and a burgundy shirt, lifts his hand to remove his sunglasses;Elegant mand med hat, seler og bordeaux skjorte, løfter hånden for at tage sine solbriller af
+womenAdAltText;Glamorous woman in a black dress with a large silver buckle, dancing and radiating sophisticated joy;Glamourøs kvinde i sort kjole med stort sølvspænde danser og udstråler sofistikeret glæde
+kidsBannerAltText;Four classically dressed children in tartan outfits smile warmly while holding hands;Fire klassisk klædte børn i skotskternede outfits smiler varmt, mens de holder hinanden i hånden
+menBannerAltText;Stylish man wearing an exclusive jacket and dark sunglasses, exuding timeless confidence;Stilfuld mand iført eksklusiv jakke og mørke solbriller, udstråler tidløs selvsikkerhed
+womenBannerAltText;Sophisticated woman in a matching jacket and trousers with a bag and red flowers behind her, completing an elegant tableau;Sofistikeret kvinde i matchende jakke og bukser med taske og røde blomster bag sig fuldender et elegant tableau
