--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -376,3 +376,5 @@ womenBannerAltText;Sophisticated woman in a matching jacket and trousers with a 
 kidsBannerAltText;Four classically dressed children in tartan outfits smile warmly while holding hands;Fire klassisk klædte børn i skotskternede outfits smiler varmt, mens de holder hinanden i hånden
 menBannerAltText;Stylish man wearing an exclusive jacket and dark sunglasses, exuding timeless confidence;Stilfuld mand iført eksklusiv jakke og mørke solbriller, udstråler tidløs selvsikkerhed
 womenBannerAltText;Sophisticated woman in a matching jacket and trousers with a bag and red flowers behind her, completing an elegant tableau;Sofistikeret kvinde i matchende jakke og bukser med taske og røde blomster bag sig fuldender et elegant tableau
+women_2AdAltText;Two women in exclusive outfits with elegant trousers and cropped jackets.;To kvinder i eksklusive outfits med elegante bukser og korte jakker.
+women_3AdAltText;Woman in a red blazer and stylish high heels leaning against a matching red telephone booth.;Kvinde i rød blazer og stilfulde stiletter læner sig op ad en matchende rød telefonboks.
