--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -92,7 +92,7 @@ doNotBleach;Do not bleach;Må ikke bleges
 email;Email;E-mail
 employee;Employee;Ansat
 error;Error;Fejl
-errorAltText;A really guilty emoji;En meget skyldig emoji
+errorAltText;A really guilty emoji.;En meget skyldig emoji.
 expanded;Expanded;Udvidet
 expandMenu;Expand menu;Udvid menu
 eye;Eye;Øje
