--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -99,16 +99,15 @@ eye;Eye;Øje
 eyeClosed;Closed eye;Lukket øje
 fashionGridKidsAlt;"Two girls sitting side by side, one in a red polka dot dress and the other in a yellow polka dot dress.";"To søde piger sidder ned, den ene i rød prikket kjole, den anden i gul prikket kjole."
 fashionGridKidsLink;Shop kids;Shop børn
-fashionGridKidsText;Fun, functional, and built for adventure-styles kids love and parents trust;Sjove og funktionelle styles til børn på farten og forældre med krav til kvalitet
+fashionGridKidsText;Fun, functional, and built for adventure-styles kids love and parents trust.;Sjove og funktionelle styles til børn på farten og forældre med krav til kvalitet.
 fashionGridMenAlt;"Man wearing sunglasses, reclining and looking up with a cheerful smile.";"Mand med solbriller ligger afslappet og kigger glad op."
 fashionGridMenLink;Shop men;Shop herre
-fashionGridMenText;Premium materials and considered design. For the man who knows that calm is a kind of strength;Eksklusive materialer og gennemtænkt design. Til manden der forstår, at ro også er styrke
+fashionGridMenText;Premium materials and considered design. For the man who knows that calm is a kind of strength.;Eksklusive materialer og gennemtænkt design. Til manden der forstår, at ro også er styrke.
 fashionGridNewHeading;Celebrating Life;Celebrating Life
-fashionGridNewText;Discover style made to move with your passions and celebrate what makes you unique;Opdag stil skabt til at følge dine passioner og hyld det, der gør dig unik
-fashionGridNewText;Discover style made to move with your passions and celebrate what makes you unique;Opdag stil skabt til at følge dine passioner og hyld det, der gør dig unik
+fashionGridNewText;Discover style made to move with your passions and celebrate what makes you unique.;Opdag stil skabt til at følge dine passioner og hyld det, der gør dig unik.
 fashionGridSaleAlt;"Young woman wearing a short, white 1960s-inspired dress.";"Ung kvinde i kort hvid 60’er-inspireret kjole."
 fashionGridWomanLink;Shop Women;Shop dame
-fashionGridWomanText;Find pieces that inspire self-expression, effortless, bold, and made to move with you;Udtryk dig selv med styles, der er ubesværede, modige og med dig i bevægelse
+fashionGridWomanText;Find pieces that inspire self-expression, effortless, bold, and made to move with you.;Udtryk dig selv med styles, der er ubesværede, modige og med dig i bevægelse.
 fashionGridWomenAlt;"Woman in a colorful outfit, wearing a beret that matches her sweater.";"Kvinde i farverigt outfit og en alpehue der matcher til hendes sweater."
 favorites;Favorites;Favoritter
 fileExceedsSize;Selected file(s) exceeds the 1MB limit; Valgte fil(er) overstiger grænsen på 1 MB. Upload venligst en mindre fil
@@ -132,7 +131,7 @@ gridSmall; Small grid;Smalt grid
 heart;Heart;Hjerte
 heroAlt;"Two women dressed in matching blazers, posing fashionably.";"To kvinder iført smarte matchende blazere."
 heroText;Upgrade your wardrobe with exclusive deals!;Opgradér din garderobe med eksklusive tilbud!
-heroText1;For a limited time, enjoy incredible discounts on the latest fashion trends;I en begrænset periode kan du få fantastiske rabatter på de nyeste modetrends
+heroText1;For a limited time, enjoy incredible discounts on the latest fashion trends.;I en begrænset periode kan du få fantastiske rabatter på de nyeste modetrends.
 heroTitle;Exclusive Fashion Sale;Eksklusivt Modesalg
 hideContent;Hide content;Skjul indhold
 hidePassword;Hide password;Skjul adgangskode
