--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -62,7 +62,7 @@ couldNotFindInfo;Sorry, We couldn’t find the information you’re looking for;
 countInStock;Items in stock;Antal på lager
 create;Create;Opret
 createAccount;Create account;Opret konto
-createNewAccount;Create new account;Oprette en ny konto
+createNewAccount;Create new account;Opret en ny konto
 createdAt;Created at;Tilføjet den
 createNewCategory;Create new category;Opret ny kategori
 createNewProduct;Create new product;Opret nyt produkt
@@ -336,11 +336,10 @@ subCategoryList;Subcategory list;Underkategori-liste
 subCategoryName;Subcategory name;Underkategori navn
 success;Success;Succes
 sureToDelete;Do you want to delete;Vil du slette
-switchAccount;Switch to a different account;Skifte til en anden konto
+switchUser;Switch user;Skift bruger
 temporarilyOutOfStock;This item is temporarily out of stock;Varen er midlertidigt udsolgt
 temporarilyOutOfStockText;Get notified when the item is back in stock;Få besked, når varen er tilbage på lager
 title;Title;Titel
-toContinue;To continue, you can;Du kan vælge at
 today;Today;I dag
 totalProducts;Total products;Antal produkter
 translationKey;Translation key;Oversættelsesnøgle
