--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -158,13 +158,13 @@ left;left;tilbage
 list;List;Liste
 loading;Loading;Loading
 lock;Lock;Hængelås
-login;Log in;Log ind
+login;Sign in;Log ind
 loginFailed;Login failed;Login mislykkedes
-loginHere;Log in here;Log ind her
+loginHere;Sign in here;Log ind her
 loginSucceeded;Login succeeded;Login lykkedes
-logout;Log out;Log ud
-logoutOfAccount;Log out of this account;Logge ud af denne konto
-logOutSucceeded;Logout succeeded;Log ud lykkedes
+logout;Sign out;Log ud
+logoutOfAccount;Sign out of this account;Logge ud af denne konto
+logOutSucceeded;Sign out succeeded;Log ud lykkedes
 lowStock;Low stock;Få på lager
 machineWash;Machine wash at 40 °C;Maskinvask ved 40 °C
 main;Main;Primær
