--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -13,6 +13,7 @@ allowedFormats;Allowed formats;Tilladte formater
 alreadyLoggedIn;You are already logged in;Du er allerede logget ind
 alreadyLoggedInAs;You are already logged in as;Du er allerede logget ind som
 ascending;ascending;stigende
+assignRole;Assign role;Tildel rolle
 available;Available;Tilgængelig
 availableColors;Available colours;Tilgængelige farver
 bag;Bag;Indkøbskurv
