--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -368,6 +368,7 @@ username;User name;Brugernavn
 users;Users;Brugere
 userUpdated;User updated;Bruger opdateret
 view;View;Se
+verifyAndUpdateInfo;Verify and update your information;Bekræft og opdatér dine oplysninger
 viewCart;View your cart;Se din indkøbskurv
 viewCategory;View category;Se kategori
 viewProduct;View product;Se produkt
