--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -368,6 +368,7 @@ username;User name;Brugernavn
 users;Users;Brugere
 userUpdated;User updated;Bruger opdateret
 view;View;Se
+viewAndTrackOrders;View and track your orders.;Tjek og følg dine ordrer.
 verifyAndUpdateInfo;Verify and update your information;Bekræft og opdatér dine oplysninger
 viewCart;View your cart;Se din indkøbskurv
 viewCategory;View category;Se kategori
@@ -376,6 +377,7 @@ viewScheduledDate;View scheduled date;Se planlagt dato
 viewYourFavorites;View your favorites;Se dine favoritter
 warning;Warning;Advarsel
 welcome;Welcome;Velkommen
+whenOrderViewAndTrack;When you order from Fashion Fusion, you can view and track your orders here.;Når du bestiller varer hos Fashion Fusion vil du kunne se og følge dine ordrer her.
 white;White;Hvid
 woman;Woman;Dame
 women_2AltText;Two women in exclusive outfits with elegant trousers and cropped jackets.;To kvinder i eksklusive outfits med elegante bukser og korte jakker.
